글로벌네비게이션바 완료

--- a/css/common.css
+++ b/css/common.css
@@ -58,9 +58,15 @@ body{
 
 /* 글로벌 네비게이션 바 영역 중 서브메뉴  */
 /* 직접 작성할 공간 */
-
-
-
+#gnb ul ul {
+    display: none;
+    position: absolute; left: 50%; top:45px;
+    width: 180px; margin-left: -90px;
+    background-color: #fff; border: #027373 1px solid;
+    border-top: none; border-radius: 0 0 7px 7px; font-size: 13px;
+}
+#gnb ul ul a { display: block;
+    height: 40px; line-height: 40px; text-align: center;}
 
 
 
