--- a/css/main.css
+++ b/css/main.css
@@ -70,23 +70,37 @@
 
 /* 슬릭 디자인 시작 */
 /* 아래 이미지 위치를 알리는 점 디자인 */
-#main_visual .slick-dots {  }
-#main_visual .slick-dots li {  }
-#main_visual .slick-dots li button {
+#main_visual .slick-dots { display: block; width: 100%;  text-align: center;
+                            position: relative; bottom:  40px;}
+#main_visual .slick-dots li { display: inline-block; width: 15px; height: 15px;
+                            margin: 5px;}
+#main_visual .slick-dots li button { 
+    border: none;
+    background-color: #5FCDD9;
+    font-size: 0;
+    display: block;
+    width: 15px; height: 15px;
+    border-radius: 50%;
+    line-height: 0;
 
 }
-#main_visual .slick-dots li.slick-active button {  }
+#main_visual .slick-dots li.slick-active button { background-color: #027373; }
 
 
 /* 버튼 초기화 */
 #main_visual .slick-prev, #main_visual .slick-next {
-
+    border: none;
+    background-color: transparent;
 }
 
 
 /* 폰트어썸을 이용한 버튼*/
 #main_visual .slick-prev {
-
+    position: absolute; left: 0; bottom: 45px;
+    z-index: 1000;
+    width: 30px; height: 30px;
+    display: inline-block;
+    text-indent: -9999px;
 }
 #main_visual .slick-prev::before {
 
