--- a/css/main.css
+++ b/css/main.css
@@ -103,12 +103,30 @@
     text-indent: -9999px;
 }
 #main_visual .slick-prev::before {
+    content: "\f053";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    text-indent: 0;
+    color: #027373;
+    position: absolute; left: 9px; top : 0px;
+    font-size: 2em;
 
 }
 #main_visual .slick-next {
-
+    position: absolute; right: 0; bottom: 45px;
+    z-index: 1000;
+    width: 30px; height: 30px;
+    display: inline-block;
+    text-indent: -9999px;
 }
 #main_visual .slick-next::before {
+    content: "\f054";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    text-indent: 0;
+    color: #027373;
+    position: absolute; left: 9px; top : 0px;
+    font-size: 2em;
 
 }
 /* 슬릭 디자인 완료 */
